# depio

./: .gitignore  README.md  SECURITY.md  demo.py  demo_functional.py  demo_hydra.py  demo_slurm.py  hook_demo.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
.run/: Python tests in tests.run.xml
config/: config.yaml
config/attack/: dombrowski.yaml  ours.yaml  zhang.yaml
src/depio/: BuildMode.py  Executors.py  Pipeline.py  SkipMode.py  Task.py  TaskHandler.py  decorators.py  exceptions.py  stdio_helpers.py
tests/: test_Integration.py  test_Pipeline.py  test_Pipeline2.py  test_Pipeline_add_task.py  test_Pipeline_solve_order.py  test_Task.py  test_Task2.py  test_Task___eq__.py  test_failed_dependency_slurm.py
