[project]
name = "depio"
version = "0.0.1"
authors = [
  { name="Maximilian Noppel", email="noppel@kit.edu" },
]
description = "A simple task manager."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]